fix dashboard card link too small & refactor dashboard cards

--- a/src/components/dashboard/Card/card.module.scss
+++ b/src/components/dashboard/Card/card.module.scss
@@ -1,10 +1,13 @@
-.cardLink {
+.card {
   svg {
     transition: 200ms;
   }
   &:hover {
     svg {
       translate: 12px;
+    }
+    .cardFooterLinkLabel {
+      text-decoration: underline;
     }
   }
 }
